2008-07-22  Dan Nicolaescu  <dann@ics.uci.edu>

	* vc-git.el (vc-git-status-printer): Update the directory display
	to match the default.

	* vc-dir.el (vc-dir-recompute-file-state): Add workaround for CVS.	

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* menu-bar.el (menu-bar-line-wrapping-menu): Use Visual Line mode
	for "word wrap" command.

	* simple.el (visual-line-mode): Disable
	truncate-partial-width-windows.

2008-07-21  Dan Nicolaescu  <dann@ics.uci.edu>

	* term/ns-win.el: Rename ns- functions/variables to the
	corresponding x- versions.
	(x-select-text, x-cut-buffer-or-selection-value)
	(x-disown-selection-internal, x-get-selection-internal)
	(x-own-selection-internal, x-defined-colors, xw-defined-colors)
	(x-display-mm-width, x-display-mm-height)
	(x-display-backing-store, x-display-save-under)
	(x-display-visual-class, x-display-screens, x-focus-frame): Remove
	defaliases.

	* frame.el (ns-display-name): Remove declaration.
	(make-frame-on-display): Use x-display-name instead
	ns-display-name.  Use unless.

	* startup.el (command-line-1): Fix indentation.

	* term/ns-win.el (up-one, down-one, left-one, right-one): Remove,
	checked in inadvertently.

2008-07-21  Chong Yidong  <cyd@stupidchicken.com>

	* term/ns-win.el: Standardize references to "Nextstep" in
	comments, messages, and docstrings.
	(ns-handle-args, x-parse-geometry)
	(ns-extended-platform-support-mode, x-setup-function-keys)
	(ns-select-overlay, ns-unselect-line, ns-yes-or-no-p)
	(ns-set-pasteboard, ns-scroll-bar-move, ns-defined-colors)
	(ns-initialized, ns-initialize-window-system): Doc fixes.

2008-07-21  Thien-Thi Nguyen  <ttn@gnuvola.org>

	* diff-mode.el (diff-auto-refine): Delete defcustom.
	(diff-auto-refine-mode): New func/var via define-minor-mode.
	Update var ref to use diff-auto-refine-mode.
	* smerge-mode.el (diff-mode): Require when compiling.
	(smerge-auto-refine): Delete defcustom.
	Update smerge-auto-refine ref to use diff-auto-refine-mode.
