@@ -1,5 +1,7 @@
 2008-07-22  Dan Nicolaescu  <dann@ics.uci.edu>
 
+	* vc-hooks.el: Remove obsolete comment.
+
 	* vc-git.el (vc-git-status-printer): Update the directory display
 	to match the default.
 
